8238592: JFR: Crash when dumping paths to gc roots on deep heaps

Reviewed-by: mgronlun